hide the photos that are not in the frame

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         <button class = "prevBtn"><<</button>
         <div class = "frame">
             <div class = "slides">
-                <img src = "images/dog.jpg">
-                <img src = "images/gorilla.jpg">
-                <img src = "images/koala.jpg">
-                <img src = "images/lion.jpg">
-                <img src = "images/rabbit.jpg">
+                <img class = "img1" src = "images/dog.jpg">
+                <img class = "img2" src = "images/gorilla.jpg">
+                <img class = "img3" src = "images/koala.jpg">
+                <img class = "img4" src = "images/lion.jpg">
+                <img class = "img5" src = "images/rabbit.jpg">
             </div>
         </div>
         <button class = "nextBtn">>></button>
     </div>
     <div class = "navBar">
-        <div class = "nav img1"></div>
-        <div class = "nav img2"></div>
-        <div class = "nav img3"></div>
-        <div class = "nav img4"></div>
-        <div class = "nav img5"></div>
+        <div class = "nav imgNav1"></div>
+        <div class = "nav imgNav2"></div>
+        <div class = "nav imgNav3"></div>
+        <div class = "nav imgNav4"></div>
+        <div class = "nav imgNav5"></div>
     </div>
 </body>
 </html>
